# public_library

./: .dockerignore  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
books_library/: app.py  app_lifespan.py  main.py
books_library/alembic/: env.py
books_library/alembic/versions/: 2026_02_13_0225-b3788c69a5a2_create_book_table.py  2026_03_05_2257-437ba5f0c6aa_add_table_author.py  2026_03_10_0138-8ec0657fe86d_add_field_short_description.py  2026_03_10_2224-9fdf74fa7a70_add_field_author_id_in_table_books_and_.py  2026_03_11_0142-420d53212137_add_field_volumes_count_in_table_books.py
books_library/api/: __init__.py
books_library/api/v1/: __init__.py  health.py
books_library/api/v1/authors/: __init__.py  dependencies.py  repositories.py  services.py  views.py
books_library/api/v1/books/: dependencies.py  exceptions.py  repositories.py  services.py  views.py
books_library/config/: app.py  database.py  path.py  settings.py
books_library/config/envs/: .env.template
books_library/config/envs_template/: .env.postgres-dev
books_library/database/: __init__.py  create_db.py
books_library/database/models/: __init__.py  author.py  base.py  book.py
books_library/dependencies/: session.py
books_library/exceptions/: __init__.py  authors.py  base.py  books.py  handlers.py
books_library/schemas/: __init__.py  authors.py  books.py
docker_build/books_library/: Dockerfile
